# virtues

./: .cursorrules  .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  ATLAS.md  CHANGEPOINT.md  CLAUDE.md  CODEMIRROR.md  DAY.md  DND_UX_SPEC.md  ENTITY_RESOLUTION.md  FINANCIAL.md  LICENSE  LICENSING.md  Makefile  ONTOLOGIES.md  PROSEMIRROR.md  README.md  TODO.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  get_refresh_token.sh  package.json  pnpm-lock.yaml
apps/tollbooth/: Cargo.toml  Dockerfile  README.md
apps/tollbooth/src/: auth.rs  budget.rs  config.rs  main.rs  models.rs  providers.rs  proxy.rs  subscription.rs  tier.rs  version.rs
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
core/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  entrypoint.sh  seed_demo_day.sql
core/.cargo/: config.toml
core/.sqlx/: query-00a0efecc7287937c50d1a1330e837b6cccc8948a40a046490fe5252eb630d96.json  query-011e9a365f0f2ea8391c0bf07350cb7e29b66a1ed3d33cbfc078d44bfecbfaeb.json  query-034671a6dc7ba1ef56145639b9cfb0d7d8ae4bc180fafe65a70014118f44b5c0.json  query-03662031c69b67b51b1a59bf91086285b9dbe9015ab88cea78dd47b7b8f480f8.json  query-0384c9f9108f4b6ac08941bab86ff466a54dc4c1a58d3a951b784293c66d0c31.json  query-038c533ed95f20819d9d17bf47357058ff0ce6f880bcba53d703b10cc47b96b0.json  query-0396c93485b8479d171afe787b9b3d5a9ed0094564649c98e2015d3b31a573bb.json  query-03a577e1b9089ffba9488fd9e4af8ce6bbb5e1552e9166e29ac78ab232d494b6.json  query-041e818e02edc00ebd904ed77ef06bc295ea4bca6518e19a876dd99670226cad.json  query-049b037d7a230c40a981f0a2e748b9fd0f6b2b4fd3457346c892a59d3ae17cd3.json  query-04e0a94d53fe60cc785d7cce52775b46a210de9247679ee89b05ca534c57371f.json  query-05052329107a8b3f8e89d537a74c12348b317e402287bd4547ea1df349553f59.json  query-05e98b592544f27c7df1f9e1eefe74d8ce6e32f8fcf449f645f936b5f9f8e051.json  query-073fc9ddc8ad504a73746f65fe4dbfd23af6534fbe0499976eaccc8307cec99b.json  query-07aebabcca7fcf97fecd7a6f17a41a1ecf94722fbff96ec26247e454e88ca963.json  query-07ed2316a98cde73a0286a218597391dbc6e5dbc82eeae2f5b87c1c9e571cd6f.json  query-09b47a6d5ef3df0a03859edf3274a7a8c643fc027a54206bc7241d17a5c9eaf6.json  query-09bec2dc8eab6061f398cb2dce585865523e85e6c42f6862202a0962eddf04ee.json  query-09f27a2f81c5d898c912ef707019cf5990b2ab602369709ffad23d68b03ddc1a.json  query-0c0971b77391e6c1f0540c88e67d297534263e518a6d34d16e8eab3530cdd85a.json  query-0c9f8734dc5e66e48d88e4ae034ca72eda145e74bcce949b98fe2509af5b4873.json  query-0e85b65a549090a56c2cb1423289b529e63be2a05ebc4265c6cc866d0927aac6.json  query-0eaaceee2b3e152015777270e16d9f74e20b347824b1244c62accde53635eea0.json  query-0ebfffa0e5b839bdba6cf60f07115292dfb6ae1b7c41bf3bf553b905bc1ed94d.json  query-0eee49a67e5601609e39c28d496d5ec2541bb832f1d1b89d3469cc79a568458e.json  query-102ce1bb626ed897db40c801de9d3c24f9dfab7e49152819e9dd6d4c200b56b7.json  query-1188b2661d29e33a9bd6a7ed32dd0b64ed43cebfcb4813a2a6b3103ba9c402a1.json  query-12e97ff065058be42b3c099ee3ede48aee5e5f59a1160bf159a218f1b118dfce.json  query-13595a9d812aed1266e9920f90d5d99f31b6edf298c6a0586403a005ae0ec52f.json  query-13de811a0c1d758474de09c49923b81f259bff6ced0e7b568152dac606e2de52.json  query-14d05240b0b69d8ad2a366cd2b79e8d42b845ac5b44aacfdc099d91862f60003.json  query-1583715defa659c3e509dd2d6e10ca1117c28d6f4cb5ce680e95d54f44e1f19f.json  query-1595f0422f15fbae174786c472566681524012cd8033375aa9ad380ce2707893.json  query-15b447004af39e5985758e10bfe018f7e0d1284a9a91427805c50d4bbf099e19.json  query-16435bc9c762cbd7e7df428f865e5cfc52e70141daa3c942edbc17bbc49cc47f.json  query-16a956bc3829f24129ee9b10cee1454db0596aa73082702bab3b003bc3ac9b0e.json  query-16cec49b8e16c9ac03f4ac1c40cd3255b573a1a6d1611848b36beafe32e399cd.json  query-1749c02593e7596bb5ac33a783e19e01001958bf050d31f13e9c89312555a8e4.json  query-18d1470abc48ed67c8b352b6796b375c2efb9b2feb25e22c3bd846c350add267.json  query-1a3aeb2694871c1468d551ccf6ea8e58d50d723e9a633899bbd146abc56f15f5.json  (+344 more)
core/data/: virtues.db  virtues.db-shm  virtues.db-wal
core/examples/: list_catalog.rs  sync_gmail.rs
core/migrations/: 001_core.sql  001_foundation.sql  002_app_schema.sql  002_entities.sql  002_google_calendar.sql  002_ontology.sql  002_pipeline.sql  002_stream_tables.sql  003_entities_and_ontology.sql  003_identity.sql  003_ontologies.sql  003_ontology.sql  003_sync_logs.sql  004_app.sql  004_application.sql  004_google_gmail.sql  004_identity.sql  004_ios_streams.sql  004_narrative_layer.sql  004_praxis.sql  005_application.sql  005_axiology.sql  005_mac_streams.sql  005_narrative.sql  005_sync_schedules.sql  005_temporal.sql  005_yjs_support.sql  006_app.sql  006_app_chat.sql  006_gemini_thinking.sql  006_ios_streams.sql  006_location_visit.sql  006_narrative_layer.sql  006_notion_streams.sql  006_timeline_chunks.sql  006_usage_limits.sql  007_axiology_tags.sql  007_bookmarks.sql  007_embeddings.sql  007_event_boundaries.sql  (+60 more)
core/migrations_postgres_backup/: 001_foundation.sql  002_entities.sql  003_ontology.sql  004_praxis.sql  005_narrative.sql  006_app.sql  007_bookmarks.sql
core/scripts/: get_google_token.sh
core/seeds/monday_in_rome/: accelerometer.csv  ambient_noise_level.csv  axiology_goals.csv  axiology_habits.csv  axiology_preferences.csv  axiology_telos.csv  axiology_temperaments.csv  axiology_values.csv  axiology_vices.csv  axiology_virtues.csv  calendar_events.csv  emails.csv  imessages.csv  location.csv  microphone.csv  narrative_day.csv  network.csv  pedometer.csv  sleep.csv
core/src/: api.rs  client.rs  error.rs  geo.rs  http_client.rs  lib.rs  main.rs  tollbooth.rs
core/src/agent/: executor.rs  mod.rs  prompt.rs  protocol.rs  stream.rs
core/src/api/: actions.rs  agents.rs  assistant_profile.rs  auth.rs  axiology.rs  chat.rs  (+57 more)
core/tests/: api_integration_test.rs  google_calendar_e2e.rs  google_gmail_e2e.rs  job_chaining_simple_test.rs  narrative_flow.rs
old/notebooks/: ariata_context_week.md  ben_franklin.ipynb  coffee_shop.ipynb  franklin_embeddings.npy  franklin_events_w5h.csv  mcp_demo_comparison.md  pyproject.toml  telos.ipynb  w5h_test_data.json
(+1402 files in other folders)
