[package]
name = "ariata"
version = "0.1.0"
edition = "2021"
authors = ["Ariata Team <team@ariata.com>"]
description = "Open source personal data ecosystem - High-performance Rust core"
license = "MIT"
repository = "https://github.com/ariata/ariata"
keywords = ["etl", "data-pipeline", "personal-data", "timeseries"]
categories = ["database", "data-structures"]
build = "build.rs"
default-run = "ariata"

[lib]
name = "ariata"
path = "src/lib.rs"

[[bin]]
name = "ariata"
path = "src/main.rs"

[[bin]]
name = "ariata-seed"
path = "src/bin/seed.rs"

[[bin]]
name = "ariata-mcp-server"
path = "src/bin/mcp-server.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }


# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "migrate", "chrono", "json", "macros", "uuid", "rust_decimal"] }

# Storage
aws-sdk-s3 = "1.49"
aws-config = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP Server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

# OAuth
oauth2 = "4.4"
reqwest = { version = "0.12", features = ["json"] }

# Environment
dotenv = "0.15"

# Scheduler
tokio-cron-scheduler = "0.13"

# Encryption for credentials
ring = "0.17"
base64 = "0.22"
hex = "0.4"
md5 = "0.7"

# HMAC signing for OAuth state tokens
hmac = "0.12"
sha2 = "0.10"

# Random generation (for OAuth state)
rand = "0.8"
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }

# URL encoding and validation
urlencoding = "2.1"
url = "2.5"

# Regular expressions
regex = "1.0"

# MCP Server
rmcp = { version = "0.8.5", features = ["server", "transport-io", "transport-streamable-http-server"] }
schemars = "1.0"

# Interactive CLI setup
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"

[dev-dependencies]
# Testing
tempfile = "3.12"
testcontainers = "0.21"
testcontainers-modules = { version = "0.11", features = ["postgres", "minio"] }
dotenv = "0.15"
serial_test = "3.1"

# Async testing
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0