[package]
name = "virtues"
version = "0.1.0"
edition = "2021"
authors = ["Virtues Team <team@virtues.com>"]
description = "Open source personal data ecosystem - High-performance Rust core"
license = "MIT"
repository = "https://github.com/ariata-os/ariata"
keywords = ["etl", "data-pipeline", "personal-data", "timeseries"]
categories = ["database", "data-structures"]
build = "build.rs"
default-run = "virtues"

[lib]
name = "virtues"
path = "src/lib.rs"

[[bin]]
name = "virtues"
path = "src/main.rs"

[[bin]]
name = "virtues-mcp-server"
path = "src/bin/mcp-server.rs"

[[bin]]
name = "virtues-prod-seed"
path = "src/bin/prod_seed.rs"


[dependencies]
# Shared registry
virtues-registry = { path = "../packages/virtues-registry" }

# CLI
clap = { version = "4.5", features = ["derive"] }


# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "rt"] }
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate", "chrono", "json", "macros", "uuid", "rust_decimal"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"
opentelemetry = { version = "0.27", features = ["metrics"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.27", features = ["metrics", "grpc-tonic"] }

# HTTP Server
axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "0.9", features = ["cookie"] }
mime_guess = "2.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
async-stream = "0.3"
tokio-stream = "0.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
uuid = { version = "1.10", features = ["v4", "serde"] }

# OAuth
oauth2 = "4.4"
reqwest = { version = "0.12", features = ["json"] }

# Financial integrations
plaid = "9.0.1"

# Environment
dotenv = "0.15"

# Scheduler
tokio-cron-scheduler = "0.13"

# Encryption for credentials
ring = "0.17"
base64 = "0.22"
hex = "0.4"

 # HMAC signing for OAuth state tokens
hmac = "0.12"
sha2 = "0.10"

# Unicode text segmentation for slug generation
unicode-segmentation = "1.11"

# Random generation (for OAuth state + BOCPD)
rand = { version = "0.9", features = ["small_rng"] }
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }

# URL encoding and validation
urlencoding = "2.1"
url = "2.5"

# HTML escaping for XSS prevention
html-escape = "0.2"

# Regular expressions
regex = "1.0"

# Static initialization
lazy_static = "1.5"

# Time handling for cookies
time = "0.3"

# MCP Server
rmcp = { version = "0.8.5", features = ["server", "transport-io", "transport-streamable-http-server"] }
schemars = "1.0"

# Geospatial/clustering
geo = "0.28"  # Geospatial calculations (Haversine distance)

# Embeddings (Ollama client)
ollama-rs = { version = "0.2", features = ["stream"] }
futures = "0.3"

# Changepoint detection
changepoint = "0.15"  # Bayesian Online Changepoint Detection
rv = "0.19"  # Probability distributions for changepoint priors

# Self-registering transforms
inventory = "0.3"

# Interactive CLI setup
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"

# Sandboxing
tempfile = "3.12"

# SSH
russh = "0.48"
russh-keys = "0.48"

# Yjs/CRDT support
yrs = "0.18"
y-sync = "0.4"
moka = { version = "0.12", features = ["sync"] }
similar = "2.7.0"

# Markdown parsing for AI editing
pulldown-cmark = { version = "0.10", default-features = false, features = ["simd"] }

# S3 Storage
aws-sdk-s3 = { version = "1.65", features = ["behavior-version-latest"] }
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
bytes = "1.7"

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
# Testing
testcontainers = "0.21"
dotenv = "0.15"
serial_test = "3.1"

# Async testing
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = "thin"

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0
