[project]
name = "ariata-notebooks"
version = "0.1.0"
description = "Interactive Jupyter notebooks for Ariata signal analysis"
requires-python = ">=3.11"
dependencies = [
    # Jupyter
    "jupyter==1.0.0",
    "ipywidgets==8.1.1",
    "notebook==7.0.6",
    
    # Data processing
    "numpy==1.26.2",
    "pandas==2.1.4",
    
    # Database
    "sqlalchemy==2.0.23",
    "asyncpg==0.29.0",
    "psycopg[binary]==3.2.1",
    "python-dotenv==1.0.0",
    
    # Algorithms
    "ruptures==1.1.9",
    "hdbscan==0.8.33",
    "scikit-learn==1.3.2",
    
    # Visualization
    "matplotlib==3.8.2",
    "seaborn==0.13.0",
    "plotly==5.18.0",
    
    # Utils
    "python-dateutil==2.8.2",
]

[tool.uv]
dev-dependencies = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.12.1",
    "ruff==0.1.9",
]