[project]
name = "ariata-services"
version = "0.1.0"
description = "Core services for Ariata platform (processing and scheduling)"
requires-python = ">=3.11"
dependencies = [
    # Web framework (for processing service)
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    
    # Task scheduling
    "celery[redis]==5.3.4",
    "redis==4.6.0",
    "croniter==2.0.1",
    "watchdog==4.0.0",  # For auto-reload in development
    
    # Configuration and utilities
    "pyyaml==6.0.1",  # For registry generation
    
    # Database
    "sqlalchemy==2.0.23",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",
    
    # Storage
    "aioboto3==12.1.0",
    
    # Data processing and ML
    "ruptures==1.1.9",
    "numpy==1.26.2",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    
    # Google services
    "google-api-python-client==2.111.0",
    "google-auth==2.25.2",
    "google-auth-httplib2==0.2.0",
    
    # Other utilities
    "cryptography==42.0.5",
    "pytz==2024.1",
    "httpx==0.25.2",
    "geopy==2.4.1",
    "av==12.0.0"
]

[tool.uv]
dev-dependencies = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0"
]